src/styles.css
body {
  margin: 0;
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
  vertical-align: center;
  color: #fff;
  background-color: rgba(0, 0, 0);
}

html {
  scroll-behavior: smooth;
}

.page {
  min-height: 100vh;
  display: flex;
}

.page:nth-child(2n+3) {
  flex-direction: row-reverse;
}

.tile {
  flex: 1;
  background-color: rgba(0, 0, 0, 0.3);
}

.lineup {
  text-align: left;
  padding: 30px;
}

.bio {
  text-align: left;
  padding: 30px;
  letter-spacing: 1px;
  line-height: 1.5rem;
}

.artist-photo {
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-color: rgb(0, 0, 0);
}

.electrostatic {
  background-image: url("/images/bg01.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.electrostatic>.artist-photo {
  background-image: url("/images/electrostatic.jpg");
}

.skind {
  background-image: url("/images/bg02.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.skind>.artist-photo {
  background-image: url("/images/skind.jpg");
}

.merra {
  background-image: url("/images/bg03.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.merra>.artist-photo {
  background-image: url("/images/merra.jpg");
}

.progruss {
  background-image: url("/images/bg01.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.progruss>.artist-photo {
  background-image: url("/images/progruss.jpg");
}

.djaff {
  background-image: url("/images/bg02.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.djaff>.artist-photo {
  background-image: url("/images/djaff.jpg");
}

.akinov {
  background-image: url("/images/bg03.jpg");
  background-repeat: no-repeat;
  background-size: cover;
}

.akinov>.artist-photo {
  background-image: url("/images/akinov.jpg");
}

.artist-photo {
  position: relative;
}

.mix {
  position: absolute;
  width: 100%;
  bottom: 0;
}

.solid-sign {
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  background-color: rgba(0, 0, 0, 0.75);
}

.logo {
  width: 344px;
  height: 344px;
  background-image: url("/images/solid_sign.png");
  background-size: auto 100%;
  background-repeat: no-repeat;
}

.title {
  text-align: center;
  font-size: 1.5em;
  font-weight: bold;
}

.title p {
  margin: 0;
}

.social {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.ticket {
  font-weight: bold;
  height: 64px;
  text-align: center;
  vertical-align: middle;
  line-height: 50px;
  background-color: Transparent;
  background-repeat:no-repeat;
  border: 2px solid hsla(0,0%,100%,.4);
  overflow: hidden;
  outline:none;
  color: #ffffff;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 26px;
  font-weight: bold;
  transition-duration: 0.4s;
  cursor: pointer;
}

.ticket:hover {
  background-color: #ffffff;
  color: #000;
}

.social-link img {
  height: 48px;
  padding: 0 40px;
}

.time {
  margin: 0 5px;
  text-align: center;
  display: inline-block;
  font-family: monospace;
}

.lineup {
  min-width: 300px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.solid-sign-1 {
  background-image: url('/images/first-page.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
}

.solid-sign-2 {
  background-image: url('/images/solid-sign-2-bg.jpeg');
  background-repeat: no-repeat;
  background-size: cover;
}

.lineup li {
  font-size: 1.5em;
  list-style: none;
}

.lineup ul {
  padding: 0;
}

.dj {
  padding: 0 5px;
  font-weight: bold;
}

.style {
  font-size: 0.7em;
}

.arrow {
  width: 18px;
  height: 32px;
  background-image: url('/images/arrow.svg');
  background-repeat: no-repeat;
  background-size: auto 100%;
  background-repeat: no-repeat;
}

.next-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.column {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-around;
  background-color: black;
  height: 100%;
  width: 38%;
  min-width: 300px;
  margin: 0 100px;
}

@media screen and (max-width: 320px) {
  h1 {
    font-size: 1.5em;
  }
  .column {
    background-color: none;
  }
}

@media screen and (max-width: 600px) {
  .page, .page:nth-child(2n+1) {
    min-height: 200vh;
    flex-direction: column;
  }

  .social {
    justify-content: space-around;
  }

  .tile {
    min-height: 100vh;
  }

  .logo {
    width: 200px;
    height: 200px;
    margin: 10px;
  }

  .style {
    display: none;
  }

  .lineup {
    font-size: 0.8em;
  }

  .ticket {
    width: 300px;
  }

  .column {
    background-color: transparent;
  }
}

